--- a/scss/application.scss
+++ b/scss/application.scss
@@ -8,8 +8,8 @@ body {
   background-color: $white;
   width: 100%;
 }
-.bar-chart {
-  max-width: 900px;
+.scatterplot-chart {
+  max-width: 1024px;
   margin: 0 auto;
   text-align: center;
 }
@@ -30,23 +30,37 @@ body {
    font: 10px sans-serif;
    text-anchor: start;
  }
-.bar:hover {
-  fill: red;
+text.name:hover {
+  cursor: default;
+  fill: white;
 }
 div.tooltip {
   position: absolute;
   text-align: center;
-  width: 200px;
-  height: 4em;
-  padding: 2px;
+  width: 400px;
+  //height: 4em;
+  padding: 30px;
   font: 22px sans-serif;
   background: lightsteelblue;
   border: 0;
   border-radius: 8px;
   pointer-events: none;
   display: flex;
-  flex-direction: column;
+  //flex-direction: column;
+  flex-wrap: wrap;
   justify-content: space-around;
+  > * {
+    flex: 1 0 120px;
+    text-align: right;
+  }
+  > *:nth-child(n+7) {
+    color: red;
+    flex: 1 0 100%;
+    text-align: left;
+  }
+  label {
+    font-size: 18px;
+  }
   > div:first-child {
     font-weight: bold;
   }
